--- a/u1_exercicio1/primeiraPagina.html/index.html
+++ b/u1_exercicio1/primeiraPagina.html/index.html
@@ -1,4 +1,22 @@
  <h1>uma manchete em h1</h1>
  <h2>uma manchete em h2</h2>
- <h3>uma manchete em he</h3>
- 
+ <h3>uma manchete em h3</h3>
+<h4>uma manchete em  h4</h4>
+um paragrafo!
+<p></p>
+outro paragrafo!
+<p></p>
+ uma lista não ordenada:
+<ul>
+  <li>pão</li>
+  <li>presuno</li>
+  <li>queijo</li>
+</ul>
+<p></p>
+uma lista ordenada:
+<ol>
+    <li>Arroz</li>
+    <li>Feijão</li>
+    <li>Frango</li>
+    <li>Batata</li>
+</ol>
