--- a/u1_exercicio1/primeiraPagina.html/index.html
+++ b/u1_exercicio1/primeiraPagina.html/index.html
@@ -1,22 +1,34 @@
- <h1>uma manchete em h1</h1>
- <h2>uma manchete em h2</h2>
- <h3>uma manchete em h3</h3>
+<DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>exercício 1 pweb by chico</title>
+</head>
+<body>
+  
+</body>
+</html>
+
+<h1>uma manchete em h1</h1>
+<h2>uma manchete em h2</h2>
+<h3>uma manchete em h3</h3>
 <h4>uma manchete em  h4</h4>
 um paragrafo!
 <p></p>
 outro paragrafo!
 <p></p>
- uma lista não ordenada:
+uma lista não ordenada:
 <ul>
-  <li>pão</li>
-  <li>presuno</li>
-  <li>queijo</li>
+ <li>pão</li>
+ <li>presuno</li>
+ <li>queijo</li>
 </ul>
 <p></p>
 uma lista ordenada:
 <ol>
-    <li>Arroz</li>
-    <li>Feijão</li>
-    <li>Frango</li>
-    <li>Batata</li>
+   <li>Arroz</li>
+   <li>Feijão</li>
+   <li>Frango</li>
+   <li>Batata</li>
 </ol>
