--- a/P.Milestone/MENU/index.html
+++ b/P.Milestone/MENU/index.html
@@ -91,25 +91,25 @@ li.dropdown {
   @keyframes changeColor {
     0% { color: rgb(0, 225, 255); }
     33% { color: rgb(255, 0, 217); }
-    66% { color: rgb(5, 9, 5); }
+    66% { color: rgb(9, 5, 5); }
     100% { color: rgb(0, 255, 98); }
   }
 
   @keyframes blink {
-    50% { opacity: 0; }
+    70%{ opacity: 0; }
   }
 
   .bar {
-    background-color: #224e2a;
-    padding: 10px 100px;
+    background-color: #5f512b;
+    padding: 10px 50px;
     display: inline-block;
-    animation: blink 2s infinite;
+    animation: blink 0s infinite;
   }
 
   .text {
     display: inline-block;
     color: white;
-    animation: changeColor 2s infinite;
+    animation: changeColor 1s infinite;
   }
 </style>
 </head>
